--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>Image Gallery</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/reset.css">
     </head>
     <body>
-        <header></header>
-        <nav></nav>
+        <section>
+            <div class= "search">
+                <input type="text" id="search" placeholder="Search">
+            </div>
+        </section>
         <footer></footer>
     </body>
 </html>
