--- a/index.html
+++ b/index.html
@@ -4,14 +4,40 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Image Gallery</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href=css/styles.css>
         <link rel="stylesheet" href="css/reset.css">
     </head>
     <body>
         <section>
-            <div class= "search">
+            <div class = "search">
                 <input type="text" id="search" placeholder="Search">
             </div>
+
+            <div class = "images"></div>
+            <!--Hay Bale picture-->
+                <a href="photo_gallery_v4/photos/thumbnails/01.jpg" alt="Hay bale" title="Hay bales are the perfect backdrop for any photo."></a>
+            <!--Mountains and lake picture-->
+                <a href="photo_gallery_v4/photos/thumbnails/02.jpg" alt="Mountains and lake" title="The mountains around the lake are so serene and misty."></a>
+            <!--Forest and mountains-->
+                <a href="photo_gallery_v4/photos/thumbnails/03.jpg" alt="Forest and mountains" title="The green forest and the mountains in the background are beautiful."></a>
+            <!--Iceberg and Mountains-->
+                <a href="photo_gallery_v4/photos/thumbnails/04.jpg" alt="Iceberg and mountains" title="The icebergs and mountains look very cold but inviting!"></a>
+            <!--Canyons-->
+                <a href="photo_gallery_v4/photos/thumbnails/05.jpg" alt="Canyons" title="The Canyons are the perfect place for a long hike with my dog."></a>
+            <!--Forest walkway-->
+                <a href="photo_gallery_v4/photos/thumbnails/06.jpg" alt="Forest walkway" title="This forest walkway is the perfect spot for a nice walk on a cloudy day."></a>
+            <!--Green field with mud-->
+                <a href="photo_gallery_v4/photos/thumbnails/07.jpg" alt="Green muddy field" title="The mountains in the background are beautiful but I wouldn't want to walk through here!"></a>
+            <!--Sandy Dunes on a beach-->
+                <a href="photo_gallery_v4/photos/thumbnails/08.jpg" alt="Sandy dunes of a beach" title="Imagine rolling down these sandy dunes straight into the ocean water!"></a>
+            <!--Meadow Walkway-->
+                <a href="photo_gallery_v4/photos/thumbnails/09.jpg" alt="Meadow walkway enclosed by trees" title="This meadow walkway looks like a scene out of Alice in Wonderland!"></a>
+            <!--Beach coastline-->
+                <a href="photo_gallery_v4/photos/thumbnails/10.jpg" alt="Beach coastline" title="This beach coastline is a great spot for a sunset picnic"></a>
+            <!--View from a mountain caave-->
+                <a hfef="photo_gallery_v4/photos/thumbnails/11.jpg" alt="View from a mountain cave" title="I would like to see this cave view of the moutnains every morning!"></a>
+            <!--Lavender meadow with mountains-->
+                <a href="photo_gallery_v4/photos/thumbnails/12.jpg" alt="Lavender meadow with mountains" title="This meadow must smell amazing with all of the lavender plants!"></a>
         </section>
         <footer></footer>
     </body>
