fix alt tags and titles of images

--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
             </div>
 
             <div class = "images"></div>
-            <!--Hay Bale picture-->
-                <a href="photo_gallery_v4/photos/thumbnails/01.jpg" alt="Hay bale" title="Hay bales are the perfect backdrop for any photo."></a>
-            <!--Mountains and lake picture-->
-                <a href="photo_gallery_v4/photos/thumbnails/02.jpg" alt="Mountains and lake" title="The mountains around the lake are so serene and misty."></a>
-            <!--Forest and mountains-->
-                <a href="photo_gallery_v4/photos/thumbnails/03.jpg" alt="Forest and mountains" title="The green forest and the mountains in the background are beautiful."></a>
-            <!--Iceberg and Mountains-->
-                <a href="photo_gallery_v4/photos/thumbnails/04.jpg" alt="Iceberg and mountains" title="The icebergs and mountains look very cold but inviting!"></a>
-            <!--Canyons-->
-                <a href="photo_gallery_v4/photos/thumbnails/05.jpg" alt="Canyons" title="The Canyons are the perfect place for a long hike with my dog."></a>
-            <!--Forest walkway-->
-                <a href="photo_gallery_v4/photos/thumbnails/06.jpg" alt="Forest walkway" title="This forest walkway is the perfect spot for a nice walk on a cloudy day."></a>
-            <!--Green field with mud-->
-                <a href="photo_gallery_v4/photos/thumbnails/07.jpg" alt="Green muddy field" title="The mountains in the background are beautiful but I wouldn't want to walk through here!"></a>
-            <!--Sandy Dunes on a beach-->
-                <a href="photo_gallery_v4/photos/thumbnails/08.jpg" alt="Sandy dunes of a beach" title="Imagine rolling down these sandy dunes straight into the ocean water!"></a>
-            <!--Meadow Walkway-->
-                <a href="photo_gallery_v4/photos/thumbnails/09.jpg" alt="Meadow walkway enclosed by trees" title="This meadow walkway looks like a scene out of Alice in Wonderland!"></a>
-            <!--Beach coastline-->
-                <a href="photo_gallery_v4/photos/thumbnails/10.jpg" alt="Beach coastline" title="This beach coastline is a great spot for a sunset picnic"></a>
-            <!--View from a mountain caave-->
-                <a hfef="photo_gallery_v4/photos/thumbnails/11.jpg" alt="View from a mountain cave" title="I would like to see this cave view of the moutnains every morning!"></a>
-            <!--Lavender meadow with mountains-->
-                <a href="photo_gallery_v4/photos/thumbnails/12.jpg" alt="Lavender meadow with mountains" title="This meadow must smell amazing with all of the lavender plants!"></a>
+            <!--Hay Bales-->
+                <a href="photo_gallery_v4/photos/thumbnails/01.jpg" alt="Hay bales" title="I love hay bales. Took this snap on a drive through the countryside past some straw fields."></a>
+            <!--Lake-->
+                <a href="photo_gallery_v4/photos/thumbnails/02.jpg" alt="Lake" title="The lake was so calm today. We had a great view of the snow on the mountains from here."></a>
+            <!--Canyon-->
+                <a href="photo_gallery_v4/photos/thumbnails/03.jpg" alt="Canyon" title="I hiked to the top of the mountain and got this picture of the canyon and trees below."></a>
+            <!--Iceberg-->
+                <a href="photo_gallery_v4/photos/thumbnails/04.jpg" alt="Iceberg" title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. "></a>
+            <!--Desert-->
+                <a href="photo_gallery_v4/photos/thumbnails/05.jpg" alt="Desert" title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."></a>
+            <!--Fall-->
+                <a href="photo_gallery_v4/photos/thumbnails/06.jpg" alt="Fall" title="Fall is coming, I love when the leaves on the trees start to change color."></a>
+            <!--Plantation-->
+                <a href="photo_gallery_v4/photos/thumbnails/07.jpg" alt="Plantation" title="I drove past this plantation yesterday, everything is so green!"></a>
+            <!--Dunes-->
+                <a href="photo_gallery_v4/photos/thumbnails/08.jpg" alt="Dunes" title="My summer vacation to the Oregon Coast. I love the sandy dunes!"></a>
+            <!--Countryside Lane-->
+                <a href="photo_gallery_v4/photos/thumbnails/09.jpg" alt="Countryside Lane" title="e enjoyed a quiet stroll down this countryside lane."></a>
+            <!--Sunset-->
+                <a href="photo_gallery_v4/photos/thumbnails/10.jpg" alt="Sunset" title="Sunset at the coast! The sky turned a lovely shade of orange."></a>
+            <!--Cave-->
+                <a hfef="photo_gallery_v4/photos/thumbnails/11.jpg" alt="Cave" title="I did a tour of a cave today and the view of the landscape below was breathtaking."></a>
+            <!--Bluebells-->
+                <a href="photo_gallery_v4/photos/thumbnails/12.jpg" alt="Bluebells" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."></a>
         </section>
         <footer></footer>
     </body>
