--- a/index.html
+++ b/index.html
@@ -15,29 +15,64 @@
 
             <div class = "images"></div>
             <!--Hay Bales-->
-                <a href="photo_gallery_v4/photos/thumbnails/01.jpg" alt="Hay bales" title="I love hay bales. Took this snap on a drive through the countryside past some straw fields."></a>
-            <!--Lake-->
-                <a href="photo_gallery_v4/photos/thumbnails/02.jpg" alt="Lake" title="The lake was so calm today. We had a great view of the snow on the mountains from here."></a>
+                <a href="photo_gallery_v4/photos/01.jpg" class="large" title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+                <img src="photo_gallery_v4/photos/thumbnails/01.jpg" alt="Hay bales" title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+                </a>
+                
+                <!--Lake-->
+                <a href="photo_gallery_v4/photos/02.jpg" class="large" title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+                <img src="photo_gallery_v4/photos/thumbnails/02.jpg" alt="Lake" title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+                </a>
+
             <!--Canyon-->
-                <a href="photo_gallery_v4/photos/thumbnails/03.jpg" alt="Canyon" title="I hiked to the top of the mountain and got this picture of the canyon and trees below."></a>
+                <a href="photo_gallery_v4/photos/03.jpg" class="large" title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+                <img src="photo_gallery_v4/photos/thumbnails/03.jpg" alt="Canyon" title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+                </a>
+
             <!--Iceberg-->
-                <a href="photo_gallery_v4/photos/thumbnails/04.jpg" alt="Iceberg" title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. "></a>
+                <a href="photo_gallery_v4/photos/04.jpg" class="large" title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. ">
+                <img src="photo_gallery_v4/photos/thumbnails/04.jpg" alt="Iceberg" title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. ">
+                </a>
+
             <!--Desert-->
-                <a href="photo_gallery_v4/photos/thumbnails/05.jpg" alt="Desert" title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."></a>
+                <a href="photo_gallery_v4/photos/05.jpg" class="large" title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+                <img src="photo_gallery_v4/photos/thumbnails/05.jpg" alt="Desert" title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+                </a>
+
             <!--Fall-->
-                <a href="photo_gallery_v4/photos/thumbnails/06.jpg" alt="Fall" title="Fall is coming, I love when the leaves on the trees start to change color."></a>
+                <a href="photo_gallery_v4/photos/06.jpg" class="large" title="Fall is coming, I love when the leaves on the trees start to change color.">
+                <img src="photo_gallery_v4/photos/thumbnails/06.jpg" alt="Fall" title="Fall is coming, I love when the leaves on the trees start to change color.">
+                </a>
+
             <!--Plantation-->
-                <a href="photo_gallery_v4/photos/thumbnails/07.jpg" alt="Plantation" title="I drove past this plantation yesterday, everything is so green!"></a>
+                <a href="photo_gallery_v4/photos/07.jpg" class="large" title="I drove past this plantation yesterday, everything is so green!">
+                <img src="photo_gallery_v4/photos/thumbnails/07.jpg" alt="Plantation" title="I drove past this plantation yesterday, everything is so green!">
+                </a>
+
             <!--Dunes-->
-                <a href="photo_gallery_v4/photos/thumbnails/08.jpg" alt="Dunes" title="My summer vacation to the Oregon Coast. I love the sandy dunes!"></a>
+                <a href="photo_gallery_v4/photos/08.jpg" class="large" title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
+                <img src="photo_gallery_v4/photos/thumbnails/08.jpg" alt="Dunes" title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
+                </a>
+
             <!--Countryside Lane-->
-                <a href="photo_gallery_v4/photos/thumbnails/09.jpg" alt="Countryside Lane" title="e enjoyed a quiet stroll down this countryside lane."></a>
+                <a href="photo_gallery_v4/photos/09.jpg" class="large" title="We enjoyed a quiet stroll down this countryside lane.">
+                <img src="photo_gallery_v4/photos/thumbnails/09.jpg" alt="Countryside Lane" title="We enjoyed a quiet stroll down this countryside lane.">
+                </a>
+
             <!--Sunset-->
-                <a href="photo_gallery_v4/photos/thumbnails/10.jpg" alt="Sunset" title="Sunset at the coast! The sky turned a lovely shade of orange."></a>
+                <a href="photo_gallery_v4/photos/10.jpg" class="large" title="Sunset at the coast! The sky turned a lovely shade of orange.">
+                <img src="photo_gallery_v4/photos/thumbnails/10.jpg" alt="Sunset" title="Sunset at the coast! The sky turned a lovely shade of orange.">
+                </a>
+
             <!--Cave-->
-                <a hfef="photo_gallery_v4/photos/thumbnails/11.jpg" alt="Cave" title="I did a tour of a cave today and the view of the landscape below was breathtaking."></a>
+                <a hfef="photo_gallery_v4/photos/11.jpg" class="large" title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+                <img src="photo_gallery_v4/photos/thumbnails/11.jpg" alt="Cave" title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+                </a>
+
             <!--Bluebells-->
-                <a href="photo_gallery_v4/photos/thumbnails/12.jpg" alt="Bluebells" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."></a>
+                <a href="photo_gallery_v4/photos/12.jpg" class="large" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+                <img src="photo_gallery_v4/photos/thumbnails/12.jpg" alt="Bluebells" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+                </a>
         </section>
     </body>
 </html>
