--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Image Gallery</title>
+        <link href="path/to/lightbox.css" rel="stylesheet" />
         <link rel="stylesheet" href=css/styles.css>
         <link rel="stylesheet" href="css/reset.css">
     </head>
