script src for jquery

--- a/index.html
+++ b/index.html
@@ -75,5 +75,6 @@
                 <img src="photo_gallery_v4/photos/thumbnails/12.jpg" alt="Bluebells" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
                 </a>
         </section>
+        <script src="path/to/lightbox.js"></script>
     </body>
 </html>
