fixed images file path

--- a/index.html
+++ b/index.html
@@ -17,63 +17,63 @@
 
             <div class = "images"></div>
             <!--Hay Bales-->
-                <a href="photo_gallery_v4/photos/01.jpg" class="large" data-lightbox="large" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
-                <img src="photo_gallery_v4/photos/thumbnails/01.jpg" alt="Hay bales" title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+                <a href="images/larger/01.jpg" class="large" data-lightbox="large" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+                <img src="images/thumbnails/01.jpg" alt="Hay bales" title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
                 </a>
                 
                 <!--Lake-->
-                <a href="photo_gallery_v4/photos/02.jpg" class="large" data-lightbox="large" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
-                <img src="photo_gallery_v4/photos/thumbnails/02.jpg" alt="Lake" title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+                <a href="images/larger/02.jpg" class="large" data-lightbox="large" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+                <img src="images/thumbnails/02.jpg" alt="Lake" title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
                 </a>
 
             <!--Canyon-->
-                <a href="photo_gallery_v4/photos/03.jpg" class="large" data-lightbox="large" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
-                <img src="photo_gallery_v4/photos/thumbnails/03.jpg" alt="Canyon" title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+                <a href="images/larger/03.jpg" class="large" data-lightbox="large" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+                <img src="images/thumbnails/03.jpg" alt="Canyon" title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
                 </a>
 
             <!--Iceberg-->
-                <a href="photo_gallery_v4/photos/04.jpg" class="large" data-lightbox="large" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. ">
-                <img src="photo_gallery_v4/photos/thumbnails/04.jpg" alt="Iceberg" title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. ">
+                <a href="images/larger/04.jpg" class="large" data-lightbox="large" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. ">
+                <img src="images/thumbnails/04.jpg" alt="Iceberg" title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. ">
                 </a>
 
             <!--Desert-->
-                <a href="photo_gallery_v4/photos/05.jpg" class="large" data-lightbox="large" data-title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
-                <img src="photo_gallery_v4/photos/thumbnails/05.jpg" alt="Desert" title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+                <a href="images/larger/05.jpg" class="large" data-lightbox="large" data-title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+                <img src="images/thumbnails/05.jpg" alt="Desert" title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
                 </a>
 
             <!--Fall-->
-                <a href="photo_gallery_v4/photos/06.jpg" class="large" data-lightbox="large" data-title="Fall is coming, I love when the leaves on the trees start to change color.">
-                <img src="photo_gallery_v4/photos/thumbnails/06.jpg" alt="Fall" title="Fall is coming, I love when the leaves on the trees start to change color.">
+                <a href="images/larger/06.jpg" class="large" data-lightbox="large" data-title="Fall is coming, I love when the leaves on the trees start to change color.">
+                <img src="images/thumbnails/06.jpg" alt="Fall" title="Fall is coming, I love when the leaves on the trees start to change color.">
                 </a>
 
             <!--Plantation-->
-                <a href="photo_gallery_v4/photos/07.jpg" class="large" data-lightbox="large" data-title="I drove past this plantation yesterday, everything is so green!">
-                <img src="photo_gallery_v4/photos/thumbnails/07.jpg" alt="Plantation" title="I drove past this plantation yesterday, everything is so green!">
+                <a href="images/larger/07.jpg" class="large" data-lightbox="large" data-title="I drove past this plantation yesterday, everything is so green!">
+                <img src="images/thumbnails/07.jpg" alt="Plantation" title="I drove past this plantation yesterday, everything is so green!">
                 </a>
 
             <!--Dunes-->
-                <a href="photo_gallery_v4/photos/08.jpg" class="large" data-lightbox="large" data-title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
-                <img src="photo_gallery_v4/photos/thumbnails/08.jpg" alt="Dunes" title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
+                <a href="images/larger/08.jpg" class="large" data-lightbox="large" data-title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
+                <img src="images/thumbnails/08.jpg" alt="Dunes" title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
                 </a>
 
             <!--Countryside Lane-->
-                <a href="photo_gallery_v4/photos/09.jpg" class="large" data-lightbox="large" data-title="We enjoyed a quiet stroll down this countryside lane.">
-                <img src="photo_gallery_v4/photos/thumbnails/09.jpg" alt="Countryside Lane" title="We enjoyed a quiet stroll down this countryside lane.">
+                <a href="images/larger/09.jpg" class="large" data-lightbox="large" data-title="We enjoyed a quiet stroll down this countryside lane.">
+                <img src="images/thumbnails/09.jpg" alt="Countryside Lane" title="We enjoyed a quiet stroll down this countryside lane.">
                 </a>
 
             <!--Sunset-->
-                <a href="photo_gallery_v4/photos/10.jpg" class="large" data-lightbox="large" data-title="Sunset at the coast! The sky turned a lovely shade of orange.">
-                <img src="photo_gallery_v4/photos/thumbnails/10.jpg" alt="Sunset" title="Sunset at the coast! The sky turned a lovely shade of orange.">
+                <a href="images/larger/10.jpg" class="large" data-lightbox="large" data-title="Sunset at the coast! The sky turned a lovely shade of orange.">
+                <img src="images/thumbnails/10.jpg" alt="Sunset" title="Sunset at the coast! The sky turned a lovely shade of orange.">
                 </a>
 
             <!--Cave-->
-                <a hfef="photo_gallery_v4/photos/11.jpg" class="large" data-lightbox="large" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
-                <img src="photo_gallery_v4/photos/thumbnails/11.jpg" alt="Cave" title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+                <a hfef="images/larger/11.jpg" class="large" data-lightbox="large" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+                <img src="images/thumbnails/11.jpg" alt="Cave" title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
                 </a>
 
             <!--Bluebells-->
-                <a href="photo_gallery_v4/photos/12.jpg" class="large" data-lightbox="large" data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
-                <img src="photo_gallery_v4/photos/thumbnails/12.jpg" alt="Bluebells" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+                <a href="images/larger/12.jpg" class="large" data-lightbox="large" data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+                <img src="images/thumbnails/12.jpg" alt="Bluebells" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
                 </a>
         </section>
         <script src="js/jquery-3.2.1.min.js"></script>
