chang meta data title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-US-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Image Gallery</title>
 
@@ -78,7 +78,7 @@
                 </a>
 
             <!--Cave-->
-                <a hfef="images/larger/11.jpg" class="large" data-lightbox="large" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+                <a href="images/larger/11.jpg" class="large" data-lightbox="large" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
                     <span class="display-none">I did a tour of a cave today and the view of the landscape below was breathtaking.</span>
                     <img src="images/thumbnails/11.jpg" alt="Cave" title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
                 </a>
